2004-03-31  Ilja Booij  <ilja@ic-s.nl>

	* db.c (db_findmailbox_by_regex): now calls regfree() to free the 
	possibly allocated memory in the preg regex struct. This fixes a 
	memory leak
	(db_listmailboxchildren): Now first makes a strdup() of the mailbox
	name from db_get_result() before freeing the result set. This should
	fix some crashes.

2004-03-22  Ilja Booij  <ilja@ic-s.nl>

	* db.c (db_imap_append_msg): use db_insert_message_block_physmessage()
	instead of db_insert_message_block()
	(db_imap_append_msg): now uses db_message_set_unique_id instead
	of db_update_message to set just the unique id of the messages and
	uses db_physmessage_set_sizes for setting message size
	This saves another query!
	(db_physmessage_set_sizes): new function to set messagesize and
	rfcsize of a physmessage.
	(db_update_message): uses db_physmessage_set_sizes

	* imapcommands.c (_ic_list): change to how regex patterns are 
	constructed to allow LIST to work on shared mailboxes

	* main.c (main): now allows two or more arguments to a getopt()
	option.

2004-03-19  Ilja Booij  <ilja@ic-s.nl>

	* pipe.c (discard_client_input): new function, used to empty a 
	file stream coming from a client.

	* lmtp.c (lmtp): messages with headers that are bigger than 
	READ_BLOCK_SIZE are rejected. Some changes were made to make sure
	that we don't get anymore data from the client before sending 
	a message indicating the failure.

	* main.c (main): now rejects headers that are bigger than READ_BLOCK_SIZE.
	This lets dbmail-smtp fail with a "data format error".

2004-03-18  Ilja Booij  <ilja@ic-s.nl>

	* sql/postgresql/migrate_from_1.x_to_2.0.pgsql: added pbsp table

	* sql/mysql/migrate_from_1.x_to_2.0.mysql: added pbsp table

	* sql/mysql/migrate_from_1.x_to_2.0_innodb.mysql: added pbsp table.

	* sql/mysql/create_tables.mysql: added pbsp table.

	* sql/postgresql/create_tables.pgsql: added pbsp table.

	* sql/mysql/create_tables_innoDB.mysql: added pbsp table.
